test/should-fail/vsgc379step.f3
/*
 * @test/compile-error
 */
var nonNumericStep = [17..42 step "n"];
